correct name of npm .binary

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nhsoc_lyre",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Catalogues New Horizons LORRI images.",
   "author": "Dave Horlick",
   "repository": {
@@ -19,7 +19,7 @@
     "underscore": "^1.8.3"
   },
   "bin": {
-    "lyre": "bin/get_nhsoc_image_metadata"
+    "get_nhsoc_image_metadata": "bin/get_nhsoc_image_metadata"
   },
   "main": "nhsoc_lyre.js",
   "scripts": {
