--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "commander": "^2.8.1",
     "htmlparser2": "^3.8.2",
     "request": "^2.56.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "jsdom" : "3.1.2"
   },
   "bin": {
     "get_nhsoc_image_metadata": "bin/get_nhsoc_image_metadata"
