--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nhsoc_lyre",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Catalogues New Horizons LORRI images.",
   "author": "Dave Horlick",
   "repository": {
@@ -20,7 +20,8 @@
     "jsdom" : "3.1.2"
   },
   "bin": {
-    "get_nhsoc_image_metadata": "bin/get_nhsoc_image_metadata"
+    "get_nhsoc_image_metadata": "bin/get_nhsoc_image_metadata",
+    "diff_nhsoc_image_metadata": "bin/diff_nhsoc_image_metadata"
   },
   "main": "nhsoc_lyre.js",
   "scripts": {
